# tct-inttrs

./: LICENSE  README.md  stack.dev.yaml  stack.yaml  tct-inttrs.cabal
examples/: loop.inttrs  loop1.inttrs  loop2.inttrs  loop3.inttrs  simpleits.inttrs  simpletrs.inttrs
src/Tct/: IntTrs.hs
tct-inttrs/: Main.hs
