name:          tct-inttrs
version:       0.1.0.0
stability:     experimental
author:
  Georg Moser, Michael Schaper
maintainer:
  Michael Schaper <michael.schaper@uibk.ac.at>,
license:       BSD3
license-file:  LICENSE
category:      Program Analysis
synopsis:      A Complexity Framework for Term Rewrite Systems
description:
  The Tyrolean Complexity Tool (TcT for short) is a tool for proving
  resource bounds for different formal systems. This package provides
  techniques for proving upper bounds on the derivational and runtime
  complexity of int-term rewriting systems automatically.
build-type:    Simple
cabal-version: >= 1.8

source-repository head
  type:     git
  location: git://github.com/ComputationWithBoundedResources/tct-inttrs


executable tct-inttrs
  main-is:
    Main.hs
  hs-source-dirs:
    tct-inttrs
  build-depends:
    array              == 0.5.*,
    bytestring         >= 0.10.4 && < 0.10.7,
    containers         >= 0.5 && < 0.6,
    fgl                == 5.5.*,
    filepath           >= 1.3,
    mtl                >= 2.1 && <= 2.3,
    base               == 4.*,
    process            >= 1.1,
    temporary          == 1.2.0.*,

    term-rewriting     == 0.*,
    term-rewriting-xml == 0.1.0.*,

    slogic             == 0.*,
    tct-common         == 3.1.*,
    tct-core           == 3.1.*,
    tct-trs            == 3.1.*,

    tct-inttrs

  extensions:
    ConstraintKinds,
    DataKinds,
    DeriveDataTypeable,
    DeriveFoldable,
    DeriveFunctor,
    DeriveTraversable,
    GeneralizedNewtypeDeriving,
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    MultiParamTypeClasses,
    TypeFamilies,
    TypeOperators

  ghc-options:
    -Wall -threaded -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N

library
  hs-source-dirs:
    src
  exposed-modules:
    Tct.IntTrs
  build-depends:
    base               == 4.*,
    containers         >= 0.5 && < 0.6,
    mtl                >= 2.1 && <= 2.3,
    parsec             == 3.1.*,
    bytestring,

    term-rewriting     == 0.*,

    slogic             == 0.*,
    tct-core           == 3.1.*,

    tct-trs            == 3.1.*,
    tct-its            == 3.1.*,
    tct-common         == 3.1.*,
    term-rewriting-xml,
    term-rewriting-xml,
    filepath,
    temporary,
    array,
    process

  ghc-options:
    -Wall -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
  extensions:
    ConstraintKinds,
    DataKinds,
    DeriveDataTypeable,
    DeriveFoldable,
    DeriveFunctor,
    DeriveTraversable,
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses,
    TypeFamilies,
    TypeOperators
